# ltf

./: readme copy.md
DRL/: Agents.py  DDPG.py  DDPGExperiment.py  DDPG_example.py  DDPGphase.py  EnvWrapper.py  Evaluate.py  PPO.py  Readme.md  TD3.py  TD3_adult.py  baseline_greedy.py  callback.py  myopic_adult.py  myopic_group.py  plott.ipynb  plott.py  pyproject.toml  utilities.py
UCB_Fair/: EnvWrapper.py  experiment_UCBFair.py  generate_dataset.py  plot_UCBFair.py  pyproject.toml  readme.md  state_action_mapping.py  ucb_fair.py  util.py
replicator_gym/: 1.0tp_loss+0.0Demographic Disparity_env_seed=0_Adult=False_episodic_mean_loss_H=100_seed=0.npy  1.0tp_loss+0.0Demographic Disparity_env_seed=0_Adult=True_episodic_mean_loss_H=150_seed=0.npy
